Thu Mar 05 18:38:24 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix reference to GTK+3 to GTK3

Thu Mar 05 18:31:22 2020  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.25

Sun Mar 01 15:31:07 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix long label in solver

	* src/gnome-genius.c: Add Yavor to the about box.

	* src/calc.h: update copyright string

Sun Feb 16 11:35:46 2020  Jiri (George) Lebl <jirka@5z.com>

	* *: Merged patch from Yavor Doganov porting to GTK3

Sun Feb 16 10:59:55 2020  Jiri (George) Lebl <jirka@5z.com>

	* configure.ac: Add patch to fix ncurses check
	  https://gitweb.gentoo.org/repo/gentoo.git/tree/sci-mathematics/genius/files/genius-1.0.23-tinfo.patch

Mon Dec 09 09:21:55 2019  Jiri (George) Lebl <jirka@5z.com>

	* compil.c: Fix encoding empty string, affected functions are
	  PrintTable and string

Wed Oct 24 20:33:24 2018  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/misc.gel: optimize the Make(Row)Vector functions
	  in case of vector input.

	* src/geniustests.txt: Add a bunch of tests

Wed Oct 24 13:38:31 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: Add AppendVector, plus a few
	  minor fixes
	
	* lib/sets/basic.gel: improve performance, and fix sets of vectors

	* lib/linear_algebra/misc.gel: Add MakeColumnVector (alias to
	  MakeVector), MakeRowVector

	* help/C/genius.xml: add docs for the new functions

Tue Oct 09 23:18:17 2018  Jiri (George) Lebl <jirka@5z.com>

	* examples/duffing-equation-trajectories.gel: Add a comment
	  for drawing only the last segment

Tue May 15 14:33:26 2018  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.24

Mon May 14 16:37:10 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, src/gnome-genius.c, src/genius.c, vte/src/vte.c,
	  vte/src/Makefile.am: Be better at finding our termcap file

Sat Apr 07 21:18:25 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, po/*.po: update the copyright string
