@@ -1,3 +1,7 @@
+Mon Jun 01 15:37:49 2020  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: fix EOF quit
+
 Thu Mar 05 18:38:24 2020  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: fix reference to GTK+3 to GTK3
